[package]
name = "dot-server"
version = "0.1.0"
authors = ["Georg vom Endt <krysopath@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
debug = false
opt-level = "s"


[dependencies]
tide = "0.15"
async-std = { version = "1.6.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
tera = "1.6"
lazy_static = "1.4"
serde_json = "1.0"
anyhow = "1.0.30"
mime = "0.3"
